--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>C'est un titre</p>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus placeat voluptatibus itaque, doloremque repellat sapiente, accusantium at iste neque dignissimos fugit? Nihil in suscipit, doloremque quos nemo sapiente expedita explicabo! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero soluta corporis voluptatibus accusantium ratione? Consequuntur error fugit eos unde mollitia obcaecati fugiat dolore, natus aut ea commodi placeat doloremque quasi?Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus ducimus minus quidem, voluptate quos ipsum doloremque velit dolores perferendis magnam facere ratione fugit esse nostrum est, eaque odio placeat sapiente.</p>
+    <p>C'est un titre <br>
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus placeat voluptatibus itaque, doloremque repellat sapiente, accusantium at iste neque dignissimos fugit? Nihil in suscipit, doloremque quos nemo sapiente expedita explicabo! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero soluta corporis voluptatibus accusantium ratione? Consequuntur error fugit eos unde mollitia obcaecati fugiat dolore, natus aut ea commodi placeat doloremque quasi?Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus ducimus minus quidem, voluptate quos ipsum doloremque velit dolores perferendis magnam facere ratione fugit esse nostrum est, eaque odio placeat sapiente.</p>
 </body>
 </html>
